更新了一点英语语言喵

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -146,22 +146,22 @@
   "message.toneko.crystal_neko.plans.13": "§dCrystal_Neko §e>> §bAt least with the neko, the single-player mode can also experience a lot of content.",
   "message.toneko.crystal_neko.plans.14": "§dCrystal_Neko §e>> §bThen...",
   "message.toneko.crystal_neko.plans.15": "§dCrystal_Neko §e>> §bIf you have any good ideas, you can tell me on github-nya.",
-  "message.toneko.crystal_neko.plans.16": "§dCrystal_Neko §e>> §b大概就这些啦~",
-  "message.toneko.crystal_neko.interactive.breed.0": "§dCrystal_Neko §e>> §b唔诶...?",
-  "message.toneko.crystal_neko.interactive.breed.1": "§dCrystal_Neko §e>> §b你... 你想和我交配?",
-  "message.toneko.crystal_neko.interactive.breed.2": "§dCrystal_Neko §e>> §b这样做... 不可以的喵！",
-  "message.toneko.crystal_neko.interactive.breed.3": "§dCrystal_Neko §e>> §b别这样喵",
+  "message.toneko.crystal_neko.plans.16": "§dCrystal_Neko §e>> §bThat’s all about it~",
+  "message.toneko.crystal_neko.interactive.breed.0": "§dCrystal_Neko §e>> §bUh...?",
+  "message.toneko.crystal_neko.interactive.breed.1": "§dCrystal_Neko §e>> §bYou... You want to mate with me?",
+  "message.toneko.crystal_neko.interactive.breed.2": "§dCrystal_Neko §e>> §bDo this... No way, meow!",
+  "message.toneko.crystal_neko.interactive.breed.3": "§dCrystal_Neko §e>> §bDon't do that, meow",
   "message.toneko.crystal_neko.nya.0": "§dCrystal_Neko §e>> §b喵~",
   "message.toneko.crystal_neko.nya.1": "§dCrystal_Neko §e>> §b喵喵喵？",
   "message.toneko.crystal_neko.nya.2": "§dCrystal_Neko §e>> §b喵呜~",
   "message.toneko.crystal_neko.nya.3": "§dCrystal_Neko §e>> §b喵~~~",
   "message.toneko.crystal_neko.nya.4": "§dCrystal_Neko §e>> §b喵喵",
   "message.toneko.crystal_neko.nya.5": "§dCrystal_Neko §e>> §b喵！",
-  "message.toneko.crystal_neko.nya_tried.0": "§dCrystal_Neko §e>> §c你玩够了没有呀！",
-  "message.toneko.crystal_neko.nya_tried.1": "§dCrystal_Neko §e>> §c不要得寸进尺呀好不好？",
-  "message.toneko.crystal_neko.nya_tried.2": "§dCrystal_Neko §e>> §c再这样我会生气哒！",
-  "message.toneko.crystal_neko.nya_tried.3": "§dCrystal_Neko §e>> §c杂鱼笨蛋变态！",
-  "message.toneko.crystal_neko.nya_tried.4": "§dCrystal_Neko §e>> §c休息一下吧喵",
+  "message.toneko.crystal_neko.nya_tried.0": "§dCrystal_Neko §e>> §cHeeeeey! Do you played enough?",
+  "message.toneko.crystal_neko.nya_tried.1": "§dCrystal_Neko §e>> §cPlease don't push your luck, okay?",
+  "message.toneko.crystal_neko.nya_tried.2": "§dCrystal_Neko §e>> §cIf you do this again, I... I will be angry!",
+  "message.toneko.crystal_neko.nya_tried.3": "§dCrystal_Neko §e>> §cZako baka hentai",
+  "message.toneko.crystal_neko.nya_tried.4": "§dCrystal_Neko §e>> §cHave a rest meow?",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
   "advancements.toneko.root.title": "§aStick to neko",
@@ -185,6 +185,28 @@
   "screen.toneko.neko_entity_interactive.button.get_down.des": "Make the neko get down (press it again to get up)",
   "screen.toneko.neko_entity_interactive.button.breed": "mating",
   "screen.toneko.neko_entity_interactive.button.breed.des": "Let the nearest neko mate with a neko (or you)",
+  "screen.toneko.crystal_neko_interactive.button.who": "Who is you?",
+  "screen.toneko.crystal_neko_interactive.button.who.des": "Listen to me say about me",
+  "screen.toneko.crystal_neko_interactive.button.about_mod": "About the Mod",
+  "screen.toneko.crystal_neko_interactive.button.about_mod.des": "Listen some info of toNeko",
+  "screen.toneko.crystal_neko_interactive.button.plans": "Update plans",
+  "screen.toneko.crystal_neko_interactive.button.plans.des": "The future update plans",
+  "screen.toneko.crystal_neko_interactive.button.links": "Links",
+  "screen.toneko.crystal_neko_interactive.button.links.des": "There is some links about the Mod",
+  "screen.toneko.crystal_neko_interactive.button.interactive": "Interactive",
+  "screen.toneko.crystal_neko_interactive.button.interactive.des": "Interactive as other neko",
+  "screen.toneko.crystal_neko_interactive.button.more": "More",
+  "screen.toneko.crystal_neko_interactive.button.more.des": "See more interactive",
+  "screen.toneko.crystal_neko_more_interactive.button.nya": "Meow Meow Meow",
+  "screen.toneko.crystal_neko_more_interactive.button.nya.des": "Meow~",
+  "screen.toneko.links.button.github": "github",
+  "screen.toneko.links.button.github.des": "See the source code? Give me a star is ok~",
+  "screen.toneko.links.button.modrinth": "modrinth",
+  "screen.toneko.links.button.modrinth.des": "There is download address of the Mod",
+  "screen.toneko.links.button.discord": "discord",
+  "screen.toneko.links.button.discord.des": "Chatting here",
+  "screen.toneko.links.button.bilibili": "Bilibili",
+  "screen.toneko.links.button.bilibili.des": "My Bilibili channel",
   "screen.toneko.mate": "Select mate target",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
