猫娘也是猫，对吧？

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.toneko.neko_collector.info": "%d / %d Neko Energy already",
   "item.toneko.furry_bohe": "Furry Bohe",
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
+  "item.toneko.adventurer_neko_spawn_egg": "Adventurer Neko Spawn",
   "itemGroup.toneko": "Neko",
   "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
