--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -6,6 +6,7 @@
   "item.toneko.neko_collector.info": "已经吸收 %d / %d 猫猫能量啦",
   "item.toneko.furry_bohe": "兽薄荷",
   "item.toneko.furry_bohe.info": "§aAlso try Furry Bohe",
+  "item.toneko.adventurer_neko_spawn_egg": "冒险家猫娘生成",
   "itemGroup.toneko": "猫猫",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反转",
