--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -13,8 +13,8 @@
   "entity.toneko.adventurer_neko": "Adventurer Neko",
   "quirk.toneko.caress": "caress",
   "quirk.toneko.caress.des": "You like to be touched",
-  "quirk.toneko.caress.use": "§dYou gently stroked %d.",
-  "quirk.toneko.caress.be_used": "§dYou were gently petted by %d",
+  "quirk.toneko.caress.use": "§dYou gently stroked %s.",
+  "quirk.toneko.caress.be_used": "§dYou were gently petted by %s",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "Eh? Do you have any idea about Crystal_Neko?",
   "quirk.toneko.crystal_neko.damage.critical": "§aHey, owner, your HP is low meow~ You need to replenish it as soon as possible~",
@@ -46,37 +46,37 @@
   "key.toneko.quirk": "open quirk GUI",
   "command.toneko.not_player": "§cOnly player can be command executor",
   "command.toneko.not_found": "§cUnable to find the player.",
-  "command.toneko.player.success": "§aYou become §6%d §a's owner now-nya",
-  "command.toneko.player.notNeko": "§cPlayer %d §cisn't a neko~",
-  "command.toneko.player.alreadyOwner": "§aYou have already been §6%d §a's owner~",
-  "command.toneko.aliases.add": "§aSet alias %d succeed!",
-  "command.toneko.aliases.remove": "§aRemove alias %d succeed!",
-  "command.toneko.xp": "§aThe xp between neko %d §a and you is %d-nya",
-  "command.toneko.remove": "§aNow you are not %d §a's owner~",
+  "command.toneko.player.success": "§aYou become §6%s §a's owner now-nya",
+  "command.toneko.player.notNeko": "§cPlayer %s §cisn't a neko~",
+  "command.toneko.player.alreadyOwner": "§aYou have already been §6%s §a's owner~",
+  "command.toneko.aliases.add": "§aSet alias %s succeed!",
+  "command.toneko.aliases.remove": "§aRemove alias %s succeed!",
+  "command.toneko.xp": "§aThe xp between neko %s §a and you is %s-nya",
+  "command.toneko.remove": "§aNow you are not %s §a's owner~",
   "command.toneko.help": "§b/toneko help:\n§a/toneko help §bI am sure you know what this command can do.\n§a/toneko player <player> §bBe a neko's owner\n§a/toneko aliases <neko> add or remove <alias> §bAdd a alias to neko（If neko say the word,the word will become 'owner'）\n§a/toneko block <neko> add or remove <blocked word> <replacement> word or all §bAdd a blocked word（the blocked word will replace with replacement)",
   "command.toneko.noPermission": "§aThat's sad because you have no permission to do this command",
-  "command.tonekoadmin.set.false": "§aSet %d to neko succeed!",
-  "command.tonekoadmin.set.true": "§aUnset %d to neko succeed!",
+  "command.tonekoadmin.set.false": "§aSet %s to neko succeed!",
+  "command.tonekoadmin.set.true": "§aUnset %s to neko succeed!",
   "command.tonekoadmin.reload": "§aReload the config and language succeed!",
   "command.tonekoadmin.reload.data": "§aSuccessfully reloaded neko data file meow",
-  "command.tonekoadmin.skin.list": "§bAll neko skins are here:\n %d",
-  "command.tonekoadmin.skin.add": "§aSuccessfully added %d §a skins meow",
-  "command.tonekoadmin.skin.remove": "§aSuccessfully deleted %d §a skins meow",
+  "command.tonekoadmin.skin.list": "§bAll neko skins are here:\n %s",
+  "command.tonekoadmin.skin.add": "§aSuccessfully added %s §a skins meow",
+  "command.tonekoadmin.skin.remove": "§aSuccessfully deleted %s §a skins meow",
   "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.not_neko": "§cYou are not a neko",
-  "command.neko.nickname.success": "§aYour nickname is %d §a now",
+  "command.neko.nickname.success": "§aYour nickname is %s §a now",
   "command.neko.level.success": "§aYou neko level is %d",
   "command.neko.lore.no_item": "§cI can find air from your hand.",
   "command.quirk.help": "§b/quirk help:\n§a/quirk help §bI am sure you know what this command can do.\n§a/quirk add <quirk> §bAdd a quirk\n§a/quirk remove <quirk> §bRemove a quirk\n§a/quirk list §bList all quirks\n§a/quirk gui §bOpen quirks GUI",
-  "command.quirk.remove": "§aRemove quirk %d §a successful",
-  "command.quirk.add": "§aAdd quirk %d §a successful",
+  "command.quirk.remove": "§aRemove quirk %s §a successful",
+  "command.quirk.add": "§aAdd quirk %s §a successful",
   "command.quirk.not_quirk": "§cThis quirk hasn't existed",
   "command.quirk.already_quirk": "§cThis quirk has already existed",
   "command.quirk.not_has_quirk": "§cYou hasn't set this quirk",
   "command.quirk.no_any_quirk": "§aYou hasn't set any quirk~",
   "command.quirk.list": "§aYou ha set these quirks: ",
-  "messages.toneko.notOwner": "§cYou are not %d 's owner~",
+  "messages.toneko.notOwner": "§cYou are not %s 's owner~",
   "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
   "messages.toneko.block.add": "§aAdd the blocked word succeed",
   "messages.toneko.client.join": "§aTips: If there is any error in chat, you don't need to care about it.",
