--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -13,8 +13,8 @@
   "entity.toneko.adventurer_neko": "冒险家猫娘",
   "quirk.toneko.caress": "抚摸",
   "quirk.toneko.caress.des": "你喜欢被摸摸",
-  "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
-  "quirk.toneko.caress.be_used": "§d你被 %d §d轻轻地抚摸了一下喵~",
+  "quirk.toneko.caress.use": "§d你轻轻抚摸了 %s §d喵~",
+  "quirk.toneko.caress.be_used": "§d你被 %s §d轻轻地抚摸了一下喵~",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "欸？你事对猫猫有想法喵？",
   "quirk.toneko.crystal_neko.damage.critical": "§a诶呀，主人，你的血量很低了喵～要尽快补充哦～",
@@ -46,31 +46,31 @@
   "key.toneko.quirk": "打开XP界面",
   "command.toneko.not_player": "§c命令执行者只能是玩家哦",
   "command.toneko.not_found": "§c没找到这个玩家哦",
-  "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
-  "command.toneko.player.notNeko": "§c玩家 %d 不是猫娘喵~",
-  "command.toneko.player.alreadyOwner": "§a已经是 §6%d §a的主人了喵~",
-  "command.toneko.aliases.add": "§a成功设置别名 %d 了喵",
-  "command.toneko.aliases.remove": "§a成功删除别名 %d 了喵",
-  "command.toneko.xp": "§a你与 %d 猫娘的好感经验为§a是 %d 喵~",
-  "command.toneko.remove": "§a你现在不是 %d 的主人了喵~",
+  "command.toneko.player.success": "§a你现在成为了 §6%s §a的主人喵~",
+  "command.toneko.player.notNeko": "§c玩家 %s 不是猫娘喵~",
+  "command.toneko.player.alreadyOwner": "§a已经是 §6%s §a的主人了喵~",
+  "command.toneko.aliases.add": "§a成功设置别名 %s 了喵",
+  "command.toneko.aliases.remove": "§a成功删除别名 %s 了喵",
+  "command.toneko.xp": "§a你与 %s 猫娘的好感经验为§a是 %s 喵~",
+  "command.toneko.remove": "§a你现在不是 %s 的主人了喵~",
   "command.toneko.help": "§b/toneko 帮助:\n§a/toneko help §b我相信你肯定知道这个命令是做什么的喵\n§a/toneko player <玩家名> §b成为一位猫娘的主人\n§a/toneko aliases <猫娘名称> add或remove <别名> §b为你添加或删除别名（会转换为'主人'的词）\n§a/toneko block <猫娘名称> add或remove <屏蔽词> <替换词> word或all §b添加屏蔽词（屏蔽词会被替换成替换词)",
   "command.toneko.noPermission": "§a你没有权限执行这个命令哦",
-  "command.tonekoadmin.set.false": "§a成功将 %d 取消设置为猫娘了喵",
-  "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
+  "command.tonekoadmin.set.false": "§a成功将 %s 取消设置为猫娘了喵",
+  "command.tonekoadmin.set.true": "§a成功将 %s 设置为猫娘了喵",
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
   "command.tonekoadmin.reload.data": "§a成功重载了猫猫数据文件了喵",
-  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %d",
-  "command.tonekoadmin.skin.add": "§a成功添加了 %d §a的皮肤了喵",
-  "command.tonekoadmin.skin.remove": "§a成功删除了 %d §a的皮肤了喵",
+  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %s",
+  "command.tonekoadmin.skin.add": "§a成功添加了 %s §a的皮肤了喵",
+  "command.tonekoadmin.skin.remove": "§a成功删除了 %s §a的皮肤了喵",
   "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
   "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧\n§a/neko level §b看看你的猫猫等级\n§a/neko lore <描述> §b给你手中的物品设置一个可爱的描述吧",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
-  "command.neko.nickname.success": "§a现在你的昵称是 %d §a啦",
+  "command.neko.nickname.success": "§a现在你的昵称是 %s §a啦",
   "command.neko.level.success": "§a你的猫猫等级是 %d §a啦",
   "command.neko.lore.no_item": "§c你手上什么都没有诶",
   "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <XP> §b添加XP\n§a/quirk remove <XP> §b删除XP\n§a/quirk list §b列出所有XP\n§a/quirk gui §b打开XP界面",
-  "command.quirk.remove": "§a成功删除了 %d §aXP了喵",
-  "command.quirk.add": "§a成功添加了 %d §aXP了喵",
+  "command.quirk.remove": "§a成功删除了 %s §aXP了喵",
+  "command.quirk.add": "§a成功添加了 %s §aXP了喵",
   "command.quirk.not_quirk": "§c这个XP不存在喵~",
   "command.quirk.already_quirk": "§c这个XP已经存在了喵~",
   "command.quirk.not_has_quirk": "§c你还没有设置这个XP哦",
@@ -78,7 +78,7 @@
   "command.quirk.list": "§a你设置了这些XP: ",
   "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
   "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
-  "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
+  "messages.toneko.notOwner": "§c你不是 %s 的主人喵~",
   "messages.toneko.client.join": "§a小提示: 如果聊天栏出现了一堆错误代码,你可以不用管它哦",
   "message.toneko.neko.gift_success.0": "§e%s §d>> §f这真的是给我的吗，太谢谢你了喵~",
   "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你对我真好喵，我超喜欢你喵~",
