--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -13,8 +13,8 @@
   "entity.toneko.adventurer_neko": "冒险家猫娘",
   "quirk.toneko.caress": "撫摸",
   "quirk.toneko.caress.des": "你喜欢被摸摸",
-  "quirk.toneko.caress.use": "§d你輕輕撫摸了 %d §d喵～",
-  "quirk.toneko.caress.be_used": "§d你被 %d §d輕輕地撫摸了一下喵～",
+  "quirk.toneko.caress.use": "§d你輕輕撫摸了 %s §d喵～",
+  "quirk.toneko.caress.be_used": "§d你被 %s §d輕輕地撫摸了一下喵～",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "欸？你对猫猫有想法？",
   "quirk.toneko.crystal_neko.damage.critical": "§a诶呀，主人，你的血量很低了喵～要尽快补充哦～",
@@ -46,31 +46,31 @@
   "key.toneko.quirk": "打开性癖界面",
   "command.toneko.not_player": "§c指令執行者只能是玩家喔",
   "command.toneko.not_found": "§c沒找到這個玩家喔",
-  "command.toneko.player.success": "§a你現在成為了 §6%d §a的主人喵～",
-  "command.toneko.player.notNeko": "§c玩家 %d 不是貓娘喵～",
-  "command.toneko.player.alreadyOwner": "§a已經是 §6%d §a的主人了喵～",
-  "command.toneko.aliases.add": "§a成功設定別名 %d 了喵",
-  "command.toneko.aliases.remove": "§a成功刪除別名 %d 了喵",
-  "command.toneko.xp": "§a你與 %d 貓娘的好感經驗是 §a%d 喵～",
-  "command.toneko.remove": "§a你現在不是 %d 的主人了喵～",
+  "command.toneko.player.success": "§a你現在成為了 §6%s §a的主人喵～",
+  "command.toneko.player.notNeko": "§c玩家 %s 不是貓娘喵～",
+  "command.toneko.player.alreadyOwner": "§a已經是 §6%s §a的主人了喵～",
+  "command.toneko.aliases.add": "§a成功設定別名 %s 了喵",
+  "command.toneko.aliases.remove": "§a成功刪除別名 %s 了喵",
+  "command.toneko.xp": "§a你與 %s 貓娘的好感經驗是 §a%s 喵～",
+  "command.toneko.remove": "§a你現在不是 %s 的主人了喵～",
   "command.toneko.help": "§b/toneko 幫助：\n§a/toneko help §b我相信你肯定知道這個指令是做什麼的喵\n§a/toneko player <玩家名> §b成為一位貓娘的主人\n§a/toneko aliases <貓娘名稱> add 或 remove <別名> §b為你新增或刪除別名（會轉換為「主人」的詞）\n§a/toneko block <貓娘名稱> add 或 remove <屏蔽詞> <替換詞> word 或 all §b新增屏蔽詞（屏蔽詞會被替換成替換詞）",
   "command.toneko.noPermission": "§a你沒有權限執行這個指令喔",
-  "command.tonekoadmin.set.false": "§a成功將 %d 取消設定為貓娘了喵",
-  "command.tonekoadmin.set.true": "§a成功將 %d 設定為貓娘了喵",
+  "command.tonekoadmin.set.false": "§a成功將 %s 取消設定為貓娘了喵",
+  "command.tonekoadmin.set.true": "§a成功將 %s 設定為貓娘了喵",
   "command.tonekoadmin.reload": "§a成功重載了設定檔和語言檔案了喵",
   "command.tonekoadmin.reload.data": "§a成功重载了猫猫数据文件了喵",
-  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %d",
-  "command.tonekoadmin.skin.add": "§a成功添加了 %d §a的皮肤了喵",
-  "command.tonekoadmin.skin.remove": "§a成功删除了 %d §a的皮肤了喵",
+  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %s",
+  "command.tonekoadmin.skin.add": "§a成功添加了 %s §a的皮肤了喵",
+  "command.tonekoadmin.skin.remove": "§a成功删除了 %s §a的皮肤了喵",
   "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
-  "command.neko.nickname.success": "§a現在你的暱稱是 %d §a啦",
-  "command.neko.level.success": "§a你的貓貓等級是 %d §a啦",
+  "command.neko.nickname.success": "§a現在你的暱稱是 %s §a啦",
+  "command.neko.level.success": "§a你的貓貓等級是 %s §a啦",
   "command.neko.lore.no_item": "§c你手上什麼都沒有耶",
   "command.quirk.help": "§b/quirk 幫助：\n§a/quirk help §b我相信你肯定知道這個指令是做什麼的喵\n§a/quirk add <性癖> §b新增性癖\n§a/quirk remove <性癖> §b刪除性癖\n§a/quirk list §b列出所有性癖\n§a/quirk gui §b打开性癖页面",
-  "command.quirk.remove": "§a成功刪除了 %d §a性癖了喵",
-  "command.quirk.add": "§a成功新增了 %d §a性癖了喵",
+  "command.quirk.remove": "§a成功刪除了 %s §a性癖了喵",
+  "command.quirk.add": "§a成功新增了 %s §a性癖了喵",
   "command.quirk.not_quirk": "§c這個性癖不存在喵～",
   "command.quirk.already_quirk": "§c這個性癖已經存在了喵～",
   "command.quirk.not_has_quirk": "§c你還沒有設定這個性癖喔",
@@ -78,7 +78,7 @@
   "command.quirk.list": "§a你設定了這些性癖：",
   "messages.toneko.block.remove": "§a成功刪除了這個屏蔽詞喵",
   "messages.toneko.block.add": "§a成功新增屏蔽詞了喵",
-  "messages.toneko.notOwner": "§c你不是 %d 的主人喵～",
+  "messages.toneko.notOwner": "§c你不是 %s 的主人喵～",
   "messages.toneko.client.join": "§a小提示：如果聊天欄出現了一堆錯誤代碼，你可以不用管它喔",
   "message.toneko.neko.gift_success.0": "§e%s §d>> §f这真的是给我的吗，太谢谢你了喵~",
   "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你对我真好喵，我超喜欢你喵~",
