更新繁體中文 (zh_tw.json)
更新繁體中文了喵~

--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -2,48 +2,48 @@
   "item.toneko.neko_potion.effect.empty": "貓娘藥水",
   "item.toneko.neko_tail": "貓尾巴",
   "item.toneko.neko_ears": "貓耳朵",
-  "item.toneko.neko_collector": "猫猫吸收器",
-  "item.toneko.neko_collector.info": "已有%d / %d 猫猫能量",
-  "item.toneko.furry_bohe": "兽薄荷",
+  "item.toneko.neko_collector": "貓貓吸收器",
+  "item.toneko.neko_collector.info": "已有%d / %d 貓貓能量",
+  "item.toneko.furry_bohe": "獸薄荷",
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
-  "item.toneko.adventurer_neko_spawn_egg": "冒险家猫娘生成",
-  "itemGroup.toneko": "猫猫",
-  "attribute.name.neko.degree": "猫猫等级",
+  "item.toneko.adventurer_neko_spawn_egg": "冒險家貓娘生成",
+  "itemGroup.toneko": "貓貓",
+  "attribute.name.neko.degree": "貓貓等級",
   "enchantment.toneko.reversion": "反轉",
-  "entity.toneko.adventurer_neko": "冒险家猫娘",
+  "entity.toneko.adventurer_neko": "冒險家貓娘",
   "quirk.toneko.caress": "撫摸",
-  "quirk.toneko.caress.des": "你喜欢被摸摸",
+  "quirk.toneko.caress.des": "你喜歡被摸摸",
   "quirk.toneko.caress.use": "§d你輕輕撫摸了 %s §d喵～",
   "quirk.toneko.caress.be_used": "§d你被 %s §d輕輕地撫摸了一下喵～",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
-  "quirk.toneko.crystal_neko.des": "欸？你对猫猫有想法？",
-  "quirk.toneko.crystal_neko.damage.critical": "§a诶呀，主人，你的血量很低了喵～要尽快补充哦～",
-  "quirk.toneko.crystal_neko.damage.low": "§a没大碍吧，主人喵？",
-  "quirk.toneko.crystal_neko.damage.medium": "§a主人觉得疼吗喵～",
-  "quirk.toneko.crystal_neko.damage.high": "§a哇哇哇，主人很疼吧，要小心点喵～",
-  "quirk.toneko.crystal_neko.join": "§a酱酱～欢迎加入喵～",
-  "quirk.toneko.crystal_neko.attack.high": "§a战斗吧，主人，我相信你可以胜利的喵～",
-  "quirk.toneko.crystal_neko.attack.medium": "§a加油哦，你已经很努力地战斗了喵～",
-  "quirk.toneko.crystal_neko.attack.low": "§a好耶，距离胜利不远了喵～",
-  "quirk.toneko.crystal_neko.attack.critical": "§a再加把劲，胜利就在前方～",
-  "quirk.toneko.crystal_neko.attack.dead": "§a好耶，成功战胜了喵～",
-  "quirk.toneko.zako": "杂鱼",
-  "quirk.toneko.zako.des": "♡杂鱼杂鱼～♡",
-  "quirk.toneko.zako.damage.critical": "§c诶呀，你怎么连自己都保护不好呀，也太菜了吧～",
-  "quirk.toneko.zako.damage.low": "§c受伤了吧，小杂鱼～",
-  "quirk.toneko.zako.damage.medium": "§c疼了吧，小杂鱼～",
-  "quirk.toneko.zako.damage.high": "§c诶呀，一不小心让自己受到这么大的伤害，可真是个杂鱼呢～",
-  "quirk.toneko.zako.join": "§c这不是小杂鱼吗～你怎么来了呀",
-  "quirk.toneko.zako.attack.high": "§c你打得过吗，杂鱼～",
-  "quirk.toneko.zako.attack.medium": "§c半天才打掉这点血量，你怎么这么菜呀～",
-  "quirk.toneko.zako.attack.low": "§c看起来你还挺厉害的嘛，小杂鱼～",
-  "quirk.toneko.zako.attack.critical": "§c诶呀，你居然要成功了？",
-  "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厉害～",
+  "quirk.toneko.crystal_neko.des": "欸？你對貓貓有想法？",
+  "quirk.toneko.crystal_neko.damage.critical": "§a哎呀，主人，你的血量很低了喵～要盡快補充哦～",
+  "quirk.toneko.crystal_neko.damage.low": "§a沒大礙吧，主人喵？",
+  "quirk.toneko.crystal_neko.damage.medium": "§a主人覺得疼嗎喵～",
+  "quirk.toneko.crystal_neko.damage.high": "§a哇哇哇，主人很疼吧，要小心點喵～",
+  "quirk.toneko.crystal_neko.join": "§a醬醬～歡迎加入喵～",
+  "quirk.toneko.crystal_neko.attack.high": "§a戰鬥吧，主人，我相信你可以勝利的喵～",
+  "quirk.toneko.crystal_neko.attack.medium": "§a加油哦，你已經很努力地戰鬥了喵～",
+  "quirk.toneko.crystal_neko.attack.low": "§a好耶，距離勝利不遠了喵～",
+  "quirk.toneko.crystal_neko.attack.critical": "§a再加把勁，勝利就在前方～",
+  "quirk.toneko.crystal_neko.attack.dead": "§a好耶，成功戰勝了喵～",
+  "quirk.toneko.zako": "雜魚",
+  "quirk.toneko.zako.des": "♡雜魚雜魚～♡",
+  "quirk.toneko.zako.damage.critical": "§c哎呀，你怎麼連自己都保護不好呀，也太菜了吧～",
+  "quirk.toneko.zako.damage.low": "§c受傷了吧，小雜魚～",
+  "quirk.toneko.zako.damage.medium": "§c疼了吧，小雜魚～",
+  "quirk.toneko.zako.damage.high": "§c哎呀，一不小心讓自己受到這麼大的傷害，可真是個雜魚呢～",
+  "quirk.toneko.zako.join": "§c這不是小雜魚嗎～你怎麼來了呀",
+  "quirk.toneko.zako.attack.high": "§c你打得過嗎，雜魚～",
+  "quirk.toneko.zako.attack.medium": "§c半天才打掉這點血量，你怎麼這麼菜呀～",
+  "quirk.toneko.zako.attack.low": "§c看起來你還挺厲害的嘛，小雜魚～",
+  "quirk.toneko.zako.attack.critical": "§c哎呀，你居然要成功了？",
+  "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厲害～",
   "key.toneko.lie" : "躺下",
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
-  "key.toneko.ride": "尝试乘骑",
-  "key.toneko.quirk": "打开性癖界面",
+  "key.toneko.ride": "嘗試乘騎",
+  "key.toneko.quirk": "打開性癖界面",
   "command.toneko.not_player": "§c指令執行者只能是玩家喔",
   "command.toneko.not_found": "§c沒找到這個玩家喔",
   "command.toneko.player.success": "§a你現在成為了 §6%s §a的主人喵～",
@@ -58,17 +58,17 @@
   "command.tonekoadmin.set.false": "§a成功將 %s 取消設定為貓娘了喵",
   "command.tonekoadmin.set.true": "§a成功將 %s 設定為貓娘了喵",
   "command.tonekoadmin.reload": "§a成功重載了設定檔和語言檔案了喵",
-  "command.tonekoadmin.reload.data": "§a成功重载了猫猫数据文件了喵",
-  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %s",
-  "command.tonekoadmin.skin.add": "§a成功添加了 %s §a的皮肤了喵",
-  "command.tonekoadmin.skin.remove": "§a成功删除了 %s §a的皮肤了喵",
+  "command.tonekoadmin.reload.data": "§a成功重載了貓貓數據文件了喵",
+  "command.tonekoadmin.skin.list": "§b所有的貓貓皮膚在這裡啦:\n %s",
+  "command.tonekoadmin.skin.add": "§a成功添加了 %s §a的皮膚了喵",
+  "command.tonekoadmin.skin.remove": "§a成功刪除了 %s §a的皮膚了喵",
   "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
   "command.neko.nickname.success": "§a現在你的暱稱是 %s §a啦",
   "command.neko.level.success": "§a你的貓貓等級是 %f §a啦",
   "command.neko.lore.no_item": "§c你手上什麼都沒有耶",
-  "command.quirk.help": "§b/quirk 幫助：\n§a/quirk help §b我相信你肯定知道這個指令是做什麼的喵\n§a/quirk add <性癖> §b新增性癖\n§a/quirk remove <性癖> §b刪除性癖\n§a/quirk list §b列出所有性癖\n§a/quirk gui §b打开性癖页面",
+  "command.quirk.help": "§b/quirk 幫助：\n§a/quirk help §b我相信你肯定知道這個指令是做什麼的喵\n§a/quirk add <性癖> §b新增性癖\n§a/quirk remove <性癖> §b刪除性癖\n§a/quirk list §b列出所有性癖\n§a/quirk gui §b打開性癖頁面",
   "command.quirk.remove": "§a成功刪除了 %s §a性癖了喵",
   "command.quirk.add": "§a成功新增了 %s §a性癖了喵",
   "command.quirk.not_quirk": "§c這個性癖不存在喵～",
@@ -80,27 +80,27 @@
   "messages.toneko.block.add": "§a成功新增屏蔽詞了喵",
   "messages.toneko.notOwner": "§c你不是 %s 的主人喵～",
   "messages.toneko.client.join": "§a小提示：如果聊天欄出現了一堆錯誤代碼，你可以不用管它喔",
-  "message.toneko.neko.gift_success.0": "§e%s §d>> §f这真的是给我的吗，太谢谢你了喵~",
-  "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你对我真好喵，我超喜欢你喵~",
-  "message.toneko.neko.gift_success.2": "§e%s §d>> §f我喜欢你的礼物喵~谢谢喵~",
-  "message.toneko.neko.gift_fail.0": "§e%s §d>> §f虽然我不太喜欢你的礼物，不过还是谢谢喵~",
-  "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心领了，不过我不太需要喵~",
-  "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
-  "message.toneko.neko.mate.start": "%s 将会与 %s 进行交配，请稍等~",
+  "message.toneko.neko.gift_success.0": "§e%s §d>> §f這真的是給我的嗎，太謝謝你了喵~",
+  "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你對我真好喵，我超喜歡你喵~",
+  "message.toneko.neko.gift_success.2": "§e%s §d>> §f我喜歡你的禮物喵~謝謝喵~",
+  "message.toneko.neko.gift_fail.0": "§e%s §d>> §f雖然我不太喜歡你的禮物，不過還是謝謝喵~",
+  "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心領了，不過我不太需要喵~",
+  "message.toneko.neko.gift_fail.2": "§e%s §d>> §f雖然你很好，不過我不太需要喵~",
+  "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
   "message.toneko.neko.mate.finish": "交配完成！",
-  "message.toneko.neko.breed_fail_baby.0": "§c你的想法有点危险!",
-  "message.toneko.neko.breed_fail_baby.1": "§c请停止你的行为!",
-  "message.toneko.neko.breed_fail_baby.2": "§c你清楚你要干什么吗?",
-  "message.toneko.neko.breed_fail_baby.3": "§c这样做...会犯法的吧?",
-  "message.toneko.neko.breed_fail_baby.4": "§c不要怪我没警告过你！",
-  "message.toneko.neko.breed_fail_baby.5": "§c你怎么可以这样！",
-  "message.toneko.neko.breed_fail_baby.6": "§c你...想干什么？",
-  "message.toneko.neko.breed_fail_baby.7": "§c这样的话...你会受到惩罚的哦~",
-  "message.toneko.neko.breed_fail_baby.8": "§c你...?这是...?",
-  "message.toneko.neko.breed_fail_baby.9": "§c死刑！必须死刑！",
-  "message.toneko.neko.breed_fail_baby.10": "§c变态！变态！变态！变态！变态！！！",
-  "message.toneko.neko.breed_fail_baby.11": "§c你这个变态到底想要干什么啊！",
-  "message.toneko.neko.breed_fail_baby.12": "§c你知道这样做的后果吗！！",
+  "message.toneko.neko.breed_fail_baby.0": "§c你的想法有點危險!",
+  "message.toneko.neko.breed_fail_baby.1": "§c請停止你的行為!",
+  "message.toneko.neko.breed_fail_baby.2": "§c你清楚你要幹什麼嗎?",
+  "message.toneko.neko.breed_fail_baby.3": "§c這樣做...會犯法的吧?",
+  "message.toneko.neko.breed_fail_baby.4": "§c不要怪我沒警告過你！",
+  "message.toneko.neko.breed_fail_baby.5": "§c你怎麼可以這樣！",
+  "message.toneko.neko.breed_fail_baby.6": "§c你...想幹什麼？",
+  "message.toneko.neko.breed_fail_baby.7": "§c這樣的話...你會受到懲罰的哦~",
+  "message.toneko.neko.breed_fail_baby.8": "§c你...?這是...?",
+  "message.toneko.neko.breed_fail_baby.9": "§c死刑！必須死刑！",
+  "message.toneko.neko.breed_fail_baby.10": "§c變態！變態！變態！變態！變態！！！",
+  "message.toneko.neko.breed_fail_baby.11": "§c你這個變態到底想要幹什麼啊！",
+  "message.toneko.neko.breed_fail_baby.12": "§c你知道這樣做的後果嗎！！",
   "title.toneko.become": "§d你變成一隻貓娘啦",
   "subtitle.toneko.become": "§a來體驗貓貓的快樂吧",
   "advancements.toneko.root.title": "§a與貓貓貼紙",
@@ -109,22 +109,22 @@
   "advancements.toneko.got_neko_potion.description": "§d取得貓娘藥水",
   "advancements.toneko.neko_armor.title": "§a喵喵叫，貓尾巴搖",
   "advancements.toneko.neko_armor.description": "§d穿上貓貓的裝備",
-  "screen.toneko.quirk": "性癖设置",
-  "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
-  "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
-  "screen.toneko.neko_entity_interactive.button.action": "行为",
-  "screen.toneko.neko_entity_interactive.button.action.des": "让猫猫做出一些动作",
-  "screen.toneko.neko_entity_interactive.button.follow": "跟随",
-  "screen.toneko.neko_entity_interactive.button.follow.des": "猫猫会跟着你哦",
-  "screen.toneko.neko_entity_interactive.button.ride": "骑乘",
-  "screen.toneko.neko_entity_interactive.button.ride.des": "让猫猫骑上最近的实体（也包括你哦）",
+  "screen.toneko.quirk": "性癖設置",
+  "screen.toneko.neko_entity_interactive.button.gift": "贈送禮物",
+  "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品贈送給貓貓",
+  "screen.toneko.neko_entity_interactive.button.action": "行為",
+  "screen.toneko.neko_entity_interactive.button.action.des": "讓貓貓做出一些動作",
+  "screen.toneko.neko_entity_interactive.button.follow": "跟隨",
+  "screen.toneko.neko_entity_interactive.button.follow.des": "貓貓會跟著你哦",
+  "screen.toneko.neko_entity_interactive.button.ride": "騎乘",
+  "screen.toneko.neko_entity_interactive.button.ride.des": "讓貓貓騎上最近的實體（也包括你哦）",
   "screen.toneko.neko_entity_interactive.button.lie": "躺下",
-  "screen.toneko.neko_entity_interactive.button.lie.des": "让猫猫躺下（再按一次就可以起来哦）",
+  "screen.toneko.neko_entity_interactive.button.lie.des": "讓貓貓躺下（再按一次就可以起來哦）",
   "screen.toneko.neko_entity_interactive.button.get_down": "趴下",
-  "screen.toneko.neko_entity_interactive.button.get_down.des": "让猫猫趴下（再按一次就可以起来哦）",
+  "screen.toneko.neko_entity_interactive.button.get_down.des": "讓貓貓趴下（再按一次就可以起來哦）",
   "screen.toneko.neko_entity_interactive.button.breed": "交配",
-  "screen.toneko.neko_entity_interactive.button.breed.des": "让猫猫和附近的猫猫交配（也可以是你哦）",
-  "screen.toneko.mate": "选择交配对象",
+  "screen.toneko.neko_entity_interactive.button.breed.des": "讓貓貓和附近的貓貓交配（也可以是你哦）",
+  "screen.toneko.mate": "選擇交配對象",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘"
