--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -88,6 +88,13 @@
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f雖然你很好，不過我不太需要喵~",
   "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
   "message.toneko.neko.mate.finish": "交配完成！",
+  "message.toneko.neko.on_hurt.0": "§e%s §d>> §f你好坏！",
+  "message.toneko.neko.on_hurt.1": "§e%s §d>> §f我讨厌你！",
+  "message.toneko.neko.on_hurt.2": "§e%s §d>> §f你...你这么可以这样！！",
+  "message.toneko.neko.on_hurt.3": "§e%s §d>> §f是...不小心的吧？",
+  "message.toneko.neko.on_hurt.4": "§e%s §d>> §f你...你太坏了！",
+  "message.toneko.neko.on_hurt.5": "§e%s §d>> §f大坏蛋！",
+  "message.toneko.neko.die.no_item_drop": "§c你太坏了，东西不还给你了，哼！",
   "message.toneko.neko.breed_fail_baby.0": "§c你的想法有點危險!",
   "message.toneko.neko.breed_fail_baby.1": "§c請停止你的行為!",
   "message.toneko.neko.breed_fail_baby.2": "§c你清楚你要幹什麼嗎?",
@@ -101,6 +108,62 @@
   "message.toneko.neko.breed_fail_baby.10": "§c變態！變態！變態！變態！變態！！！",
   "message.toneko.neko.breed_fail_baby.11": "§c你這個變態到底想要幹什麼啊！",
   "message.toneko.neko.breed_fail_baby.12": "§c你知道這樣做的後果嗎！！",
+  "message.toneko.crystal_neko.who.0": "§dCrystal_Neko §e>> §b我是CrystalNeko",
+  "message.toneko.crystal_neko.who.1": "§dCrystal_Neko §e>> §b唔... 这个名字有点难记吧...",
+  "message.toneko.crystal_neko.who.2": "§dCrystal_Neko §e>> §b不过没关系哒，你其实不用叫我全名哦... 叫我“猫猫”也可以哦",
+  "message.toneko.crystal_neko.who.3": "§dCrystal_Neko §e>> §btoNeko的开发者...就是我哦",
+  "message.toneko.crystal_neko.who.4": "§dCrystal_Neko §e>> §b不知道你喜不喜欢这个模组呢",
+  "message.toneko.crystal_neko.who.5": "§dCrystal_Neko §e>> §b不过... 你能游玩它我就已经很高兴啦",
+  "message.toneko.crystal_neko.who.6": "§dCrystal_Neko §e>> §b还想听我讲些其它的东西嘛，我很乐意讲给你听哒",
+  "message.toneko.crystal_neko.about_mod.0": "§dCrystal_Neko §e>> §btoNeko这个模组的话... 准确的说，是插件... 最开始我只是做着玩的",
+  "message.toneko.crystal_neko.about_mod.1": "§dCrystal_Neko §e>> §b然后就随便录了个视频发在了B站上",
+  "message.toneko.crystal_neko.about_mod.2": "§dCrystal_Neko §e>> §b不过... 我并没有想到，它居然小火了一把...",
+  "message.toneko.crystal_neko.about_mod.3": "§dCrystal_Neko §e>> §b说实话... 我还挺意外的...",
+  "message.toneko.crystal_neko.about_mod.4": "§dCrystal_Neko §e>> §b然后呢... 我下定了决心，将这个插件继续开发下去",
+  "message.toneko.crystal_neko.about_mod.5": "§dCrystal_Neko §e>> §b至于为什么现在是模组了呢... 这个其实也说来话长了喵",
+  "message.toneko.crystal_neko.about_mod.6": "§dCrystal_Neko §e>> §b考虑到绝大部分玩家都不太会用插件... 所以，我就开始开发模组版了",
+  "message.toneko.crystal_neko.about_mod.7": "§dCrystal_Neko §e>> §b模组版本确实更受欢迎一点，毕竟用的人多嘛",
+  "message.toneko.crystal_neko.about_mod.8": "§dCrystal_Neko §e>> §b中途，也就是24年6月份的时候，我还把它重构了一次",
+  "message.toneko.crystal_neko.about_mod.9": "§dCrystal_Neko §e>> §b重构... 可想而知，工作量还是挺大的",
+  "message.toneko.crystal_neko.about_mod.10": "§dCrystal_Neko §e>> §b不过为了它以后的发展，我还是下定决心了...",
+  "message.toneko.crystal_neko.about_mod.11": "§dCrystal_Neko §e>> §b说起来... toNeko也一周年了呢...",
+  "message.toneko.crystal_neko.about_mod.12": "§dCrystal_Neko §e>> §b我也确实没想到我能坚持这么久",
+  "message.toneko.crystal_neko.about_mod.13": "§dCrystal_Neko §e>> §b对我来说，真是个奇迹喵",
+  "message.toneko.crystal_neko.about_mod.14": "§dCrystal_Neko §e>> §b嗯... 好啦，大概就这么多吧...",
+  "message.toneko.crystal_neko.about_mod.15": "§dCrystal_Neko §e>> §b也是很感谢你能听完这段故事",
+  "message.toneko.crystal_neko.about_mod.16": "§dCrystal_Neko §e>> §b还有其它想知道的嘛",
+  "message.toneko.crystal_neko.plans.0": "§dCrystal_Neko §e>> §b关于这个模组未来的更新计划嘛...",
+  "message.toneko.crystal_neko.plans.1": "§dCrystal_Neko §e>> §b其实比较随缘的...",
+  "message.toneko.crystal_neko.plans.2": "§dCrystal_Neko §e>> §b目前我也没有一个很明确的计划",
+  "message.toneko.crystal_neko.plans.3": "§dCrystal_Neko §e>> §b基本上... 是想到什么好玩的就做了",
+  "message.toneko.crystal_neko.plans.4": "§dCrystal_Neko §e>> §b它是以”猫娘“和”可爱“为主题在一直更新...",
+  "message.toneko.crystal_neko.plans.5": "§dCrystal_Neko §e>> §b所以... 你可以看到... 更新很零散...",
+  "message.toneko.crystal_neko.plans.6": "§dCrystal_Neko §e>> §b嗯... 目前主要还是在Fabric端更新",
+  "message.toneko.crystal_neko.plans.7": "§dCrystal_Neko §e>> §bNeoForge可能也会更新，但是功能不太全，更新速度也可能相对慢点",
+  "message.toneko.crystal_neko.plans.8": "§dCrystal_Neko §e>> §b毕竟... 我也没有太多的时间",
+  "message.toneko.crystal_neko.plans.9": "§dCrystal_Neko §e>> §b而Bukkit那边... 我已经没有精力去做了...",
+  "message.toneko.crystal_neko.plans.10": "§dCrystal_Neko §e>> §b所以未来的话呢，主要就管Fabric这边了",
+  "message.toneko.crystal_neko.plans.11": "§dCrystal_Neko §e>> §b目前的主要工作还是制作猫娘NPC",
+  "message.toneko.crystal_neko.plans.12": "§dCrystal_Neko §e>> §b毕竟toNeko单人模式下可玩的内容还是太少了喵",
+  "message.toneko.crystal_neko.plans.13": "§dCrystal_Neko §e>> §b至少有了猫娘后，单人模式也能体验到不少内容了喵",
+  "message.toneko.crystal_neko.plans.14": "§dCrystal_Neko §e>> §b然后嘛...",
+  "message.toneko.crystal_neko.plans.15": "§dCrystal_Neko §e>> §b如果你有什么好的想法的话呢，可以在github上告诉我哦，我会尽可能采纳的喵",
+  "message.toneko.crystal_neko.plans.16": "§dCrystal_Neko §e>> §b大概就这些啦~",
+  "message.toneko.crystal_neko.interactive.breed.0": "§dCrystal_Neko §e>> §b唔诶...?",
+  "message.toneko.crystal_neko.interactive.breed.1": "§dCrystal_Neko §e>> §b你... 你想和我交配?",
+  "message.toneko.crystal_neko.interactive.breed.2": "§dCrystal_Neko §e>> §b这样做... 不可以的喵！",
+  "message.toneko.crystal_neko.interactive.breed.3": "§dCrystal_Neko §e>> §b别这样喵",
+  "message.toneko.crystal_neko.nya.0": "§dCrystal_Neko §e>> §b喵~",
+  "message.toneko.crystal_neko.nya.1": "§dCrystal_Neko §e>> §b喵喵喵？",
+  "message.toneko.crystal_neko.nya.2": "§dCrystal_Neko §e>> §b喵呜~",
+  "message.toneko.crystal_neko.nya.3": "§dCrystal_Neko §e>> §b喵~~~",
+  "message.toneko.crystal_neko.nya.4": "§dCrystal_Neko §e>> §b喵喵",
+  "message.toneko.crystal_neko.nya.5": "§dCrystal_Neko §e>> §b喵！",
+  "message.toneko.crystal_neko.nya_tried.0": "§dCrystal_Neko §e>> §c你玩够了没有呀！",
+  "message.toneko.crystal_neko.nya_tried.1": "§dCrystal_Neko §e>> §c不要得寸进尺呀好不好？",
+  "message.toneko.crystal_neko.nya_tried.2": "§dCrystal_Neko §e>> §c再这样我会生气哒！",
+  "message.toneko.crystal_neko.nya_tried.3": "§dCrystal_Neko §e>> §c杂鱼笨蛋变态！",
+  "message.toneko.crystal_neko.nya_tried.4": "§dCrystal_Neko §e>> §c休息一下吧喵",
   "title.toneko.become": "§d你變成一隻貓娘啦",
   "subtitle.toneko.become": "§a來體驗貓貓的快樂吧",
   "advancements.toneko.root.title": "§a與貓貓貼紙",
