--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -7,6 +7,9 @@
   "item.toneko.furry_bohe": "獸薄荷",
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
   "item.toneko.adventurer_neko_spawn_egg": "冒險家貓娘生成",
+  "item.toneko.catnip": "猫薄荷",
+  "item.toneko.catnip_seed": "猫薄荷种子",
+  "block.toneko.catnip": "猫薄荷",
   "itemGroup.toneko": "貓貓",
   "attribute.name.neko.degree": "貓貓等級",
   "enchantment.toneko.reversion": "反轉",
