--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.toneko.catnip": "Catnip",
   "item.toneko.catnip_seed": "Catnip Seed",
   "block.toneko.catnip": "Catnip",
+  "effect.toneko.exciting": "Exciting",
   "itemGroup.toneko": "Neko",
   "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
