--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -10,6 +10,7 @@
   "item.toneko.catnip": "猫薄荷",
   "item.toneko.catnip_seed": "猫薄荷种子",
   "block.toneko.catnip": "猫薄荷",
+  "effect.toneko.exciting": "兴奋",
   "itemGroup.toneko": "猫猫",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反转",
