--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -90,6 +90,8 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §f虽然我不太喜欢你的礼物，不过还是谢谢喵~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心领了，不过我不太需要喵~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
+  "message.toneko.neko.gift_full.0": "§e%s §d>> §f咱身上的东西有点太多了喵~",
+  "message.toneko.neko.gift_full.1": "§e%s §d>> §f真的要塞不下啦",
   "message.toneko.neko.on_hurt.0": "§e%s §d>> §f你好坏！",
   "message.toneko.neko.on_hurt.1": "§e%s §d>> §f我讨厌你！",
   "message.toneko.neko.on_hurt.2": "§e%s §d>> §f你...你这么可以这样！！",
