添加配置屏幕

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -216,6 +216,8 @@
   "screen.toneko.links.button.discord.des": "来这里聊聊天喵",
   "screen.toneko.links.button.bilibili": "B站",
   "screen.toneko.links.button.bilibili.des": "这事模组作者的B站帐号哦",
+  "screen.toneko.config.button.true": "§a启用",
+  "screen.toneko.config.button.false": "§c禁用",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
