--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -220,11 +220,34 @@
   "screen.toneko.config.button.true": "§a启用",
   "screen.toneko.config.button.false": "§c禁用",
   "screen.toneko.config.key.language": "语言",
+  "screen.toneko.config.key.language.des": "可以设置为zh_cn，zh_tw，en_us（只会影响少量文本哦）",
   "screen.toneko.config.key.chat.enable": "启用聊天修改",
+  "screen.toneko.config.key.chat.enable.des": "这样你的聊天就会被修改，如果不喜欢的话呢，就把它关掉吧",
   "screen.toneko.config.key.chat.format": "聊天格式",
+  "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名称,%msg%=玩家消息,%prefix%=前缀",
   "screen.toneko.config.key.stats": "启用猫猫统计",
+  "screen.toneko.config.key.stats.des": "这是猫猫的统计系统",
   "screen.toneko.config.button.quit": "我改好啦",
   "screen.toneko.config.button.apply": "马上生效",
+  "screen.toneko.config.button.random": "换一个",
+  "screen.toneko.config.random.0": "我做这个其实只是为了好玩喵",
+  "screen.toneko.config.random.1": "没有技术，全是情感",
+  "screen.toneko.config.random.2": "屏幕那边的你一定很可爱吧~^_^~",
+  "screen.toneko.config.random.3": "其实这个模组最开始只是插件来着",
+  "screen.toneko.config.random.4": "喵呜~",
+  "screen.toneko.config.random.5": "在下CrystalNeko喵~",
+  "screen.toneko.config.random.6": "Ciallo～(∠・ω< )⌒☆",
+  "screen.toneko.config.random.7": "这肯定不是猫猫的问题，绝对不是！",
+  "screen.toneko.config.random.8": "§kIamATextItIsReally",
+  "screen.toneko.config.random.9": "Also try Furry Bohe",
+  "screen.toneko.config.random.10": "杂鱼杂鱼~",
+  "screen.toneko.config.random.11": "小猫娘，可爱捏~",
+  "screen.toneko.config.random.12": "才...才不是喜欢你呢",
+  "screen.toneko.config.random.13": "§d粉色很好看，不是吗",
+  "screen.toneko.config.random.14": "我是一只小猫猫，喵喵喵~",
+  "screen.toneko.config.random.15": "其实游戏里猫娘的胸部大小是根据作者的大小设置的哦",
+  "screen.toneko.config.random.16": "我是水猫，喜欢水commit喵",
+  "screen.toneko.config.random.17": "喵呜...? 喵呜！ 喵喵喵！",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
