感觉自己什么也没干

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -248,6 +248,10 @@
   "screen.toneko.config.random.15": "其实游戏里猫娘的胸部大小是根据作者的大小设置的哦",
   "screen.toneko.config.random.16": "我是水猫，喜欢水commit喵",
   "screen.toneko.config.random.17": "喵呜...? 喵呜！ 喵喵喵！",
+  "screen.toneko.config.random.18": "其实/neko命令里的很多东西都只是为了好玩喵",
+  "screen.toneko.config.random.19": "现在看我以前写的文案感觉好尴尬喵",
+  "screen.toneko.config.random.20": "Kotlin其实超赞的",
+  "screen.toneko.config.random.21": "rua~",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
