--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -216,6 +216,55 @@
   "screen.toneko.links.button.bilibili": "Bilibili",
   "screen.toneko.links.button.bilibili.des": "My Bilibili channel",
   "screen.toneko.mate": "Select mate target",
+  "screen.toneko.config.title": "Neko Settings",
+  "screen.toneko.config.button.true": "§aEnable",
+  "screen.toneko.config.button.false": "§cDisable",
+  "screen.toneko.config.key.language": "Language",
+  "screen.toneko.config.key.language.des": "Can be set to zh_cn, zh_tw, en_us (only affects a small amount of text)",
+  "screen.toneko.config.key.chat.enable": "Enable chat modification",
+  "screen.toneko.config.key.chat.enable.des": "This will modify your chat. If you don't like it, just turn it off",
+  "screen.toneko.config.key.chat.format": "Chat format",
+  "screen.toneko.config.key.chat.format.des": "You can modify the chat format, %name%=player name, %msg%=player message, %prefix%=prefix",
+  "screen.toneko.config.key.ai.enable": "Enable neko AI",
+  "screen.toneko.config.key.ai.enable.des": "You can chat with neko in the game",
+  "screen.toneko.config.key.ai.key": "AI API key",
+  "screen.toneko.config.key.ai.key.des": "Gemini's API key§o(click to view details)",
+  "screen.toneko.config.key.ai.prompt": "AI prompt",
+  "screen.toneko.config.key.ai.prompt.des": "I don't think we need to say more§o(click to view details)",
+  "screen.toneko.config.key.stats": "Enable cat statistics",
+  "screen.toneko.config.key.stats.des": "This is the cat statistics system",
+  "screen.toneko.config.button.quit": "I have changed it",
+  "screen.toneko.config.button.apply": "Take effect immediately",
+  "screen.toneko.config.button.random": "Change",
+  "screen.toneko.config.random.0": "I made this just for fun, meow",
+  "screen.toneko.config.random.1": "No technology, all emotion",
+  "screen.toneko.config.random.2": "You must be very cute on the other side of the screen~^_^~",
+  "screen.toneko.config.random.3": "In fact, this mod was just a plugin at first",
+  "screen.toneko.config.random.4": "Meow~",
+  "screen.toneko.config.random.5": "I'm CrystalNeko meow~",
+  "screen.toneko.config.random.6": "Ciallo～(∠・ω< )⌒☆",
+  "screen.toneko.config.random.7": "This is definitely not the neko problem, absolutely not! ",
+  "screen.toneko.config.random.8": "§kIamATextItIsReally",
+  "screen.toneko.config.random.9": "Also try Furry Bohe",
+  "screen.toneko.config.random.10": "Zakozako~",
+  "screen.toneko.config.random.11": "Neko, cute~",
+  "screen.toneko.config.random.12": "I... I don't like you",
+  "screen.toneko.config.random.13": "§dPink is beautiful, isn't it",
+  "screen.toneko.config.random.14": "I am a little neko, meow meow meow~",
+  "screen.toneko.config.random.15": "In fact, the size of the cat girl's breasts in the game is set according to the size of the author",
+  "screen.toneko.config.random.16": "I am a water neko, I like water commit meow",
+  "screen.toneko.config.random.17": "Meow...? Meow! Meow meow meow!",
+  "screen.toneko.config.random.18": "Actually, many things in the /neko command are just for fun meow",
+  "screen.toneko.config.random.19": "Now I feel so embarrassed when I look at the copywriting I wrote before meow",
+  "screen.toneko.config.random.20": "Kotlin is actually awesome",
+  "screen.toneko.config.random.21": "rua~",
+  "screen.toneko.config.random.22": "I really don't like winter, it's so cold meow",
+  "screen.toneko.config.random.23": "My favorite season is of course summer meow",
+  "screen.toneko.config.random.24": "Don't touch my tail, it's very sensitive meow",
+  "screen.toneko.config.random.25": "Great! ",
+  "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
+  "screen.toneko.config.random.27": "Keep the moon bright",
+  "screen.toneko.config.random.28": "Don't let unhappy emotions occupy your heart, neko wishes you happiness forever",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
   "misc.toneko.prefix": "§aneko"
