--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -225,6 +225,12 @@
   "screen.toneko.config.key.chat.enable.des": "这样你的聊天就会被修改，如果不喜欢的话呢，就把它关掉吧",
   "screen.toneko.config.key.chat.format": "聊天格式",
   "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名称,%msg%=玩家消息,%prefix%=前缀",
+  "screen.toneko.config.key.ai.enable": "启用猫娘AI",
+  "screen.toneko.config.key.ai.enable.des": "你可以在游戏中与猫娘进行聊天哦",
+  "screen.toneko.config.key.ai.key": "AI API密钥",
+  "screen.toneko.config.key.ai.key.des": "Gemini的API密钥§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.prompt": "AI提示词",
+  "screen.toneko.config.key.ai.prompt.des": "想必不用咱多说了叭§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.stats": "启用猫猫统计",
   "screen.toneko.config.key.stats.des": "这是猫猫的统计系统",
   "screen.toneko.config.button.quit": "我改好啦",
@@ -252,6 +258,13 @@
   "screen.toneko.config.random.19": "现在看我以前写的文案感觉好尴尬喵",
   "screen.toneko.config.random.20": "Kotlin其实超赞的",
   "screen.toneko.config.random.21": "rua~",
+  "screen.toneko.config.random.22": "真的好不喜欢冬天，好冷啊喵",
+  "screen.toneko.config.random.23": "最喜欢的季节当然是夏天啦喵",
+  "screen.toneko.config.random.24": "别摸尾巴哦，很敏感的喵",
+  "screen.toneko.config.random.25": "好耶！",
+  "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
+  "screen.toneko.config.random.27": "要让月亮一直皎洁哦",
+  "screen.toneko.config.random.28": "不要让不开心的情绪占据了你的心灵哦，猫猫祝你一直开心",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
